CHANGES IN FLTK 1.1.1

	- Vertical scrollbars did not draw the arrows inactive
	  when the scrollbar was inactive.


CHANGES IN FLTK 1.1.0

	- Documentation updates.
	- Added a Fl_Widget::redraw_label() method which flags a
	  redraw of the appropriate area.  This helps to
	  eliminate flicker when updating the value of a widget.
	- Fl_Wizard::value() now resets the mouse cursor to the
	  window's default cursor.
	- Fl_File_Chooser::type() didn't enable/disable the new
	  directory button correctly.
	- Fl_Preferences::entryExists() did not work properly.
	- FLUID's image file chooser pattern was incorrect.
	- Fl_File_Icon::load_system_icons() now detects KDE
	  icons in /opt/kde, /usr/local, and /usr automatically,
	  and supports the KDEDIR environment variable as well.
	- Submenus now display to the left of the parent menu if
	  they won't fit to the right.  Previously they would
	  display right on top of the parent menu...
	- Fl_Menu_:add() didn't handle a trailing "\" character
	  gracefully.
	- Clicking/dragging the middle mouse button in a
	  scrollbar now moves directly to that scroll position,
	  matching the behavior of other toolkits.
	- Added some more range checking to the Fl_Text_Display
	  widget.
	- The editor demo did not correctly update the style
	  (syntax highlighting) information.


CHANGES IN FLTK 1.1.0rc7

	- Updated the Fl_Text_Buffer and Fl_Text_Display classes
	  to be based on NEdit 5.3 (patch from George Garvey).
	- Fixed a problem with Fl::wait(0.0) on MacOS X 10.2;
	  this affected the fractals demo and other OpenGL
	  applications.
	- Fl_Glut_Window now takes keyboard focus and handles
	  shortcut events.
	- The MacOS X implementation of fl_ready() now checks
	  the event queue for events.
	- Fl_PNM_Image now supports the XV/GIMP thumbnail format
	  (P7).
	- Fl_Preferences would not find groups inside the root 
	  group.
	- Small bug fixes for Fl_Chart, Fl_Scrollbar, Fl_Tabs,
	  and FLUID from Matthew Morrise.