@@ -1,7 +1,7 @@
 <HTML>
 <HEAD>
 	<META NAME="robots" CONTENT="noindex">
-	<TITLE>FLTK 1.1.0 Programming Manual</TITLE>
+	<TITLE>FLTK 1.1.1 Programming Manual</TITLE>
 </HEAD>
 <BODY>
 
@@ -10,8 +10,8 @@
 	<TD VALIGN="MIDDLE">
 	<IMG SRC="FL.gif" WIDTH="200" HEIGHT="100" ALIGN="ABSMIDDLE" ALT="FL"></TD>
 	<TD ALIGN="CENTER" VALIGN="MIDDLE">
-	<H1>FLTK 1.1.0 Programming Manual</H1>
-	<P>Revision 1 by Michael Sweet, Craig P. Earls, and Bill Spitzak<BR>
+	<H1>FLTK 1.1.1 Programming Manual</H1>
+	<P>Revision 2 by Michael Sweet, Craig P. Earls, and Bill Spitzak<BR>
 	Copyright 1998-2002 by Bill Spitzak and others.</P>
 	</TD>
 </TR>
@@ -19,8 +19,9 @@
 
 <TABLE BGCOLOR="#9f9f9f" CELLPADDING="8" CELLSPACING="0" SUMMARY="TITLE BAR" WIDTH="700">
 <TR>
-	<TD ALIGN="CENTER">This software is provided under the terms of the GNU Library General
-	Public License.</TD>
+	<TD ALIGN="CENTER"><B>This software and manual are
+	provided under the terms of the GNU Library General
+	Public License.</B></TD>
 </TR>
 </TABLE>
 
