@@ -2,20 +2,24 @@
 <HEAD>
 	<META CONTENT="Written by Michael Sweet, Craig P. Earls, and Bill Spitzak" NAME="Author">
 	<META CONTENT="Copyright 1998-2002 by Bill Spitzak and Others." NAME="Copyright">
-	<META CONTENT="Revision 1" NAME="DocNumber">
-	<TITLE>FLTK 1.1.0 Programming Manual</TITLE>
+	<META CONTENT="Revision 2" NAME="DocNumber">
+	<TITLE>FLTK 1.1.1 Programming Manual</TITLE>
 </HEAD>
 <BODY>
 
 <H1 ALIGN="RIGHT"><A NAME="preface">Preface</A></H1>
 
 <P>This manual describes the Fast Light Tool Kit (&quot;FLTK&quot;)
-version 1.1.0, a C++ Graphical User Interface
+version 1.1.1, a C++ Graphical User Interface
 (&quot;GUI&quot;) toolkit for UNIX, Microsoft Windows and MacOS. Each
 of the chapters in this manual is designed as a tutorial for
 using FLTK, while the appendices provide a convenient reference
 for all FLTK widgets, functions, and operating system
 interfaces.</P>
+
+<P><B>This manual may be printed, modified, and/or used under
+the terms of the FLTK license provided in <A
+HREF="license.html">Appendix A</A>.</B>
 
 <H2>Organization</H2>
 
